examples/test/testpolicy13686.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13686
  namespace: namespace44
spec:
  podSelector:
    matchLabels:
      key32: value2
      key11: value36
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key16: value0
          key41: value18
      podSelector:
        matchLabels:
          key25: value29
